Fri Oct 12 05:25:00 2012  Zachary Scott	<zzak@ruby-lang.org>

	* lib/timeout.rb (timeout):
	  Remove paragraph on wrong implementation detail.
	  [ruby-core:47739] [Bug #7088]

Thu Oct 11 23:09:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_sub{seq,pos,str}, rb_str_each_{line,codepoint}):
	  prevent String copies from GC.  [ruby-core:47881] [Bug #7135]

Thu Oct 11 07:40:50 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* iseq.c (insn_operand_intern): cast op to rb_call_info_t* before
	  compare with iseq->callinfo_entries whose type is rb_call_info_t*.

Thu Oct 11 03:37:08 2012  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_block.rb: add tests for block with super.

Thu Oct 11 02:54:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_dump.c: fix debug prints to catch up recent changes
	  such as VM data structures.

Thu Oct 11 02:50:34 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (insn_operand_intern): add support disasm TS_CALLINFO
	  operands.

Wed Oct 10 15:12:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess#test_execopts_gid): skip on
	  windows because the platform does not have Process.group method.
	  patched by Jon Forums in [ruby-core:47878] [Bug #7133].

Tue Oct  9 23:18:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_file, assert_file_not): more
	  descriptive assertions for File predicates.

Tue Oct  9 18:01:37 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sample): use rb_random_ulong_limited, since
	  precision of long may be larger than double.

	* random.c (rb_random_ulong_limited): new function to return a random
	  value from 0 upto limit as unsigned long, simillary to
	  rb_genrand_ulong_limited but with arbitrary RNG object.

Tue Oct  9 17:13:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_addopt, rb_execarg_run_options): add :uid and
	  :gid options.  [ruby-core:47414] [Feature #6975]
